objects/Merck__c.object
<CustomObject>
    <fields>
        <fullName>Merck_Picklist__c</fullName>
        <label>Merck Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value01</fullName>
                </value>
                <value>
                    <fullName>Value02</fullName>
                </value>
                <value>
                    <fullName>Value03</fullName>
                </value>
                <value>
                    <fullName>Value04</fullName>
                </value>
                <value>
                    <fullName>Value05</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YT_List_of_Values__c</fullName>
        <description>YT added picklist.</description>
        <inlineHelpText>YT help Text</inlineHelpText>
        <label>YT List of Values</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>mem1</fullName>
                    <default>true</default>
                    <label>mem1</label>
                </value>
                <value>
                    <fullName>mem2</fullName>
                </value>
                <value>
                    <fullName>mem3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YT_TEXT__c</fullName>
        <label>YT TEXT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                </value>
                <value>
                    <fullName>b</fullName>
                </value>
                <value>
                    <fullName>c</fullName>
                </value>
                <value>
                    <fullName>d</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Merck</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Merck Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mercks</pluralLabel>
    <recordTypes>
        <fullName>YT_Rec_Type</fullName>
        <active>true</active>
        <description>YT test record type</description>
        <label>YT Rec Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>